--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
       "git add"
     ]
   },
+  "prettier": {
+    "singleQuote": true
+  },
   "devDependencies": {
     "husky": "^1.3.1",
     "lint-staged": "^8.1.4",
