--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "singleQuote": true
   },
   "devDependencies": {
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.4",
-    "prettier": "^1.16.4"
+    "husky": "^3.0.4",
+    "lint-staged": "^9.2.3",
+    "prettier": "^1.18.2"
   },
   "dependencies": {
-    "@slack/client": "^4.9.0"
+    "@slack/webhook": "^5.0.1"
   }
 }
